# pillar-press

./: .env.example  .env.hosted.example  .gitignore  .vercelignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  drizzle.config.ts  middleware.ts  next.config.mjs  package-lock.json  package.json  tsconfig.tsbuildinfo
__tests__/: admin-support.test.ts  anthropic-json.test.ts  audio-actions-ui.test.ts  audio-actions.test.ts  background-jobs.test.ts  billing-ui.test.ts  billing.test.ts  book-export.test.ts  browser-book-screen.test.ts  browser-book.test.ts  browser-desk-screen.test.ts  browser-exporters.test.ts  browser-gather-weave.test.ts  browser-generators.test.ts  browser-letter.test.ts  browser-library.test.ts  browser-media-library.test.ts  browser-references.test.ts  browser-style-survey.test.ts  browser-tweaks-panel.test.ts  browser-weave.test.ts  campaign-entitlements.test.ts  category-context.test.ts  condense.test.ts  desk-chat.test.ts  desktop-native-settings.test.ts  drive-routes.test.ts  feature-tracker-integrity.test.ts  feedback-widget.test.ts  file-extract-route.test.ts  file-extract.test.ts  gates.test.ts  gather-run-campaign.test.ts  gather-run-hosted.test.ts  gather-schedules-hosted.test.ts  (+51 more)
src-tauri/: AGENTS.md  Cargo.toml  Info.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/permissions/: desktop-setup.toml
src-tauri/resources/whisper/: README.md
src-tauri/resources/whisper/lib/: libggml-base.0.dylib  libggml.0.dylib  libomp.dylib  libwhisper.1.dylib
src-tauri/src/: main.rs
(+273 files in other folders)
