[package]
name = "pillar-press"
version = "0.2.1"
description = "Pillar Press"
authors = ["Pillar"]
edition = "2021"
build = "build.rs"
license = "MIT"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
aes-gcm = "0.10"
base64 = "0.22"
cpal = "0.15"
hound = "3.5"
rand = "0.8"
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }

tauri-plugin-process = "2.3.1"
tauri-plugin-updater = "2.10.1"

[target.'cfg(target_os = "macos")'.dependencies]
objc2-foundation = { version = "0.3.2", features = ["NSProcessInfo", "NSString"] }
